@startuml
'https://plantuml.com/class-diagram

class User{
-String username
-String password
}
class DangNhap{
' chi co duy nhat nen dung instance
+ {static} DangNhap instance
List<User> listUser
User user
- DangNhap()
+{static} getinstance()
+ login(User u)
+ logout()
+ toString()
}

User <-- "user" DangNhap
User <--* DangNhap

@enduml